# eva-indy

./: Makefile  pyproject.toml
evaindy/: __init__.py  app_settings.py  apps.py  auth_hooks.py  tasks.py  urls.py  views.py
evaindy/templates/evaindy/: base.html  index.html
evaindy/tests/: test_example.py
