[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "eva-indy"
description = "evaindy Plugin for Alliance Auth (GitHub Version)"
readme = "README.md"
keywords = [
    "allianceauth",
]
license = { file = "LICENSE" }
authors = [
    { name = "Evgeny Vereshchagin", email = "ev@ev-ev.me" },
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth<5,>=4",
]
urls.Changelog = ""
urls."Issue / Bug Reports" = ""

[tool.hatch.version]
path = "evaindy/__init__.py"

[tool.hatch.build]
include = [
    "/evaindy",
]
